# medical_agent

./: .gitignore  INSTALLATION.md  README.md  TODO.txt  main.py  pyproject.toml
agent/: core.py  data_ingestor.py  data_insights.py  forecasting.py  main.py  persistence.py  recommendations.py  tracking.py  utils.py
agent/data/: generate_data.py
data/: generate_data.py
sim_data/: reports.csv  simulation.csv
