[project]
name = "medical-agent"
version = "0.1.0"
description = "Medical agent that recommends optimal actions and learns on user input."
authors = [{name = "Shashwat"}]
dependencies = [
    "streamlit",
    "numpy",
    "pandas",
    "langgraph",
    "google-generativeai",
    "python-dotenv",
    "sentence-transformers",
    "faiss-cpu",
    "scikit-learn"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "sim_data", "sim_outputs"]
